Update contact email for data deletion instructions

--- a/data-deletion.html
+++ b/data-deletion.html
@@ -4,6 +4,6 @@
 <body>
   <h2>Data Deletion Instructions</h2>
   <p>This demo app does not permanently store any user data.</p>
-  <p>If you wish to delete your information, please contact us at <b>yourname@example.com</b> or simply log out of Facebook to revoke access.</p>
+  <p>If you wish to delete your information, please contact us at <b>priyadeore905@gmail.com</b> or simply log out of Facebook to revoke access.</p>
 </body>
 </html>
